@@ -6,6 +6,7 @@ aclocal.m4
 autom4te.cache
 config.guess
 config.h
+config.h.in
 config.log
 config.status
 config.sub
